--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,7 @@ h3 {
 }
 
 #header {
+    width: 100%;
     height: 80px;
     background-color: #333;
 }
@@ -118,12 +119,13 @@ h3 {
     color: #fff;
     justify-content: space-between;
     align-items: center;
+    box-sizing: border-box;
 }
 
 .gnb_left,
 .gnb_right {
     display: flex;
-    gap: 120px;
+    gap: 160px;
     font-size: 24px;
 }
 
@@ -367,11 +369,11 @@ h3 {
 .inner_footer {
     width: 1320px;
     margin: 0 auto;
+}
+.footer_box {
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
-}
-
+} 
 .footer_list {
     width: 600px;
     display: flex;
@@ -411,7 +413,6 @@ h3 {
 }
 
 .copyright {
-    width: 1320px;
     text-align: center;
     font-size: 16px;
     color: rgba(34, 34, 34, 0.5);
