--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,6 @@ h3 {
     height: 100%;
     margin: 0 auto;
     display: flex;
-    padding: 0 128px;
     color: #fff;
     justify-content: space-between;
     align-items: center;
@@ -129,8 +128,10 @@ h3 {
 .gnb_left,
 .gnb_right {
     display: flex;
-    gap: 160px;
+    gap: 120px;
     font-size: 24px;
+    padding: 0 100px;
+    box-sizing: border-box;
 }
 
 .gnb_left li a:hover,
